# ParallelJobScheduling

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  node.cpp  node.h
src/graphs/: 8_nodes.txt  \r\n_endline.txt  cyclic.txt  empty_line.txt  example.txt  missing_to.txt  not_connected.txt  not_defined_to_node.txt  not_unique_names.txt
src/graphs/expected_outputs/: exp_8nodes.txt  exp_example.txt  exp_not_connected.txt
